Get error message from cfdg